# testflow-platform

./: .env.example  .flake8  .gitignore  PORTFOLIO.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py  auth.py  executions.py  projects.py  test_cases.py
app/core/: __init__.py  config.py  exceptions.py  security.py
app/db/: __init__.py  mongodb.py  postgresql.py  redis.py
app/models/: __init__.py  execution.py  project.py  test_case.py  test_suite.py  user.py
app/schemas/: __init__.py  common.py  execution.py  project.py  test_case.py  user.py
app/services/: auth_service.py  project_service.py  test_case_service.py
app/tasks/: celery_app.py  execution_tasks.py
docker/: Dockerfile  Dockerfile.celery
tests/: conftest.py
tests/unit/: test_auth.py
