[metadata]
name = testflow-platform
version = 1.0.0
description = Test Management Platform with FastAPI
author = Biniyam Gashaw
author_email = biniyam.gashaw@yahoo.com

[options]
python_requires = >=3.11
packages = find:
include_package_data = True

[options.packages.find]
where = .
include = app*
exclude = tests*

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
asyncio_mode = auto
addopts = 
    -v
    --strict-markers
    --tb=short
    --disable-warnings
markers =
    unit: Unit tests
    integration: Integration tests
    slow: Slow tests
